# GenerativeAI

./: requirements.txt
Langchain/: conversationalQAchatbot.ipynb
Langchain/DataIngestion/: Chroma.ipynb  Faiss.ipynb  RecurciveJsonsplitter.ipynb  data.txt  dataingestion.ipynb  document.xml  htmlsplitting.ipynb  text_splitting.ipynb
Langchain/DataIngestion/chroma_db/: chroma.sqlite3
Langchain/DataIngestion/faiss_index/: index.faiss  index.pkl
Langchain/LCEL/: serve.py  simplelcelllm.ipynb
Langchain/LLM_CHATBOT/: basic.ipynb  vectorstore_retrieval.ipynb
langchainUpdated/: agent.ipynb  middleware.ipynb  modeIntegration.ipynb  pyproject.toml  requirements.txt  streamBatch.ipynb  structured_output.ipynb  structured_outputTypedict.ipynb
